--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit==1.29.0
-pandas==2.1.3
-numpy==1.26.0  # Latest version that works with Streamlit 1.29.0
-scikit-learn==1.3.2
-joblib==1.3.2
+streamlit
+pandas
+joblib
+scikit-learn
